WHATEVER	WHENEVER	Javier Taibo <javier.taibo@gmail.com>
	BUG FIX in importer. It crashed when importing geometry with normals but no normal indices
	Per-fragment lighting Lambert shader (with fallback to OpenGL material if shader not supported)
	Config option for creating GLSL shaders

0.4.1	2010/10/01	Javier Taibo <javier.taibo@gmail.com>
	BUG FIX in export MEL script, when using shelf button "Export to OSG (option box)"
	Lighting model: local viewer, global ambient color
	Preliminary shadows support (osgShadow)

0.4.0	2010/09/30	Javier Taibo <javier.taibo@gmail.com>
	Export any transform animation, baked with configurable sampling step in the option box "sample by"
	Bug fixed: spot light cone angle
	Added a button to "export and preview" in the option box
	Option to convert from Y-Up to Z-Up coordinate system when exporting
	Particle systems preliminary support
	Maya GUI dialog window for exporter configuration
	New maya2osg command-line options (-exportDefaultCameras, -exportOrthoCameras, -surfaceMode, -texClampMode, ...)
	Test models/scenes in a Maya project
	Single/double sided surfaces (backface culling) and two-side lighting mode
	Import geometry normals
	Automated installation for current user after compilation in Visual Studio
	Installation batch file for Windows (INSTALL.bat)
	Added new tools/icons to the shelf: Preview, Preview with axes, quick export/option box, unload plug-in
	Projects for Maya 2009
	Minor bug fixes

0.3.0	2010/09/02	Javier Taibo <javier.taibo@gmail.com>
	Added preliminary support for Maya cameras
	Added importer (command osg2maya)
	Added new tools/icons to the shelf: Clean scene, Import from OSG

0.2.2	2010/08/19	Javier Taibo <javier.taibo@gmail.com>
	Changed directory structure
	Bug fixes
	Projects for Maya 2010 and Maya 2011, Windows and Linux
	Documentation updated

0.2.0	2010/08/03	Javier Taibo <javier.taibo@gmail.com>
	Source code and comments translation to English
	Minor bug fixes
	Bug fix: Export of selected objects