@@ -1,13 +1,13 @@
 #include <maya/MFnCamera.h>
 #include <maya/MColor.h>
 #include <maya/MPlug.h>
+#include <maya/MFnTransform.h>
+#include <maya/MMatrix.h>
 #include "camera.h"
 #include "config.h"
 #include <fstream>
 #include <osgViewer/Viewer>
 #include <osgDB/WriteFile>
-
-std::string Camera::_sceneFileBaseName;
 
 /**
  *	Exports Camera node
@@ -56,7 +56,42 @@ osg::ref_ptr<osg::Node> Camera::exporta(MObject &obj)
 	osg::Vec3d eye(meye.x, meye.y, meye.z);
 	osg::Vec3d center(mcenter.x, mcenter.y, mcenter.z);
 	osg::Vec3d up(mup.x, mup.y, mup.z);
-	viewer.getCamera()->setViewMatrixAsLookAt( eye, center, up );
+
+    osg::Matrix look_at;
+    look_at.makeLookAt(eye, center, up);
+
+    // Now we get the camera transformation and apply it to the lookAt matrix
+    osg::Matrix trans;
+
+    if ( dn.parentCount() > 1 ) {
+        std::cerr << "WARNING: Multiple instanced cameras not currently supported" << std::endl;
+        return NULL;
+    }
+    MObject parent = dn.parent(0);
+    MFnDagNode dn_parent(parent);
+    MFnTransform mfn_trans(parent);
+    mfn_trans.transformationMatrix().get( (double(*)[4]) trans.ptr() );
+
+    // Accumulate transformations up to the root
+    while ( dn_parent.parentCount() > 0 ){
+        if ( dn_parent.parentCount() > 1 ) {
+            std::cerr << "WARNING: Multiple instanced cameras not currently supported" << std::endl;
+            return NULL;
+        }
+        osg::Matrix new_trans;
+        mfn_trans.setObject(dn_parent.parent(0));
+        mfn_trans.transformationMatrix().get( (double(*)[4]) new_trans.ptr() );
+        trans *= new_trans;
+        dn_parent.setObject( dn_parent.parent(0) );
+    }
+
+    if ( Config::instance()->getYUp2ZUp() ) {
+        osg::Matrix yup2zup;
+        yup2zup.makeRotate( osg::Vec3(0.0, 1.0, 0.0), osg::Vec3(0.0, 0.0, 1.0) );
+        trans *= yup2zup;
+	}
+
+	viewer.getCamera()->setViewMatrix( look_at * osg::Matrix::inverse(trans) );
 
 	// Projection matrix
 	double l, r, b ,t;
@@ -80,17 +115,9 @@ osg::ref_ptr<osg::Node> Camera::exporta(MObject &obj)
 	}
 
 	// Write camera/viewer config file
-	std::string camera_filename = _sceneFileBaseName + "_" + std::string(dn.name().asChar()) + ".osg";
-	osgDB::writeObjectFile( viewer, camera_filename );
+    std::string camera_filename = Config::instance()->getSceneFileBaseName() + "_" + std::string(dn.name().asChar()) + ".osg";
+    osgDB::writeObjectFile( viewer, camera_filename );
 
 	// We do not include the camera in the scene graph, so return NULL
 	return NULL;
 }
-
-/// Get the scene file base name
-const std::string &Camera::getSceneFileBaseName()
-{ return _sceneFileBaseName; }
-
-/// Set the scene file base name
-void Camera::setSceneFileBaseName( const std::string &name )
-{ _sceneFileBaseName = name; }
