@@ -18,6 +18,8 @@
     along with Maya2OSG.  If not, see <http://www.gnu.org/licenses/>.
 */
 #include "cameraanimation.h"
+#include "config.h"
+
 #include <fstream>
 #include <iomanip>
 #include <osg/io_utils>
@@ -31,9 +33,23 @@ void CameraAnimation::save(const osg::AnimationPath *ap, const std::string &file
 
 	std::ofstream output(filename.c_str());
 
+    osg::Quat quat_yup2zup;
+    quat_yup2zup.makeRotate( osg::Vec3(0.0, 0.0, 1.0), osg::Vec3(0.0, 1.0, 0.0) );
+    osg::Matrix mat_yup2zup( quat_yup2zup );
+
 	for(it=ap->getTimeControlPointMap().begin(); it!=ap->getTimeControlPointMap().end() ; it++){
 		double time = it->first;
 		osg::AnimationPath::ControlPoint cp = it->second;
-		output << std::setprecision(10) << time << " " << cp.getPosition() << " " << cp.getRotation() << std::endl;
+        if ( Config::instance()->getYUp2ZUp() ) {
+            osg::Vec4 pos = mat_yup2zup * osg::Vec4(cp.getPosition(), 1.0);
+            osg::Vec3 pos3(pos.x(), pos.y(), pos.z());
+            // We must post-multiply the quaternion with the conjugate 
+            // of yup2zup quaternion, even though I don't really know exactly why... :-m
+            osg::Quat rot = cp.getRotation() * quat_yup2zup.conj();
+            output << std::setprecision(10) << time << " " << pos3 << " " << rot << std::endl;
+        }
+        else {
+            output << std::setprecision(10) << time << " " << cp.getPosition() << " " << cp.getRotation() << std::endl;
+        }
 	}
 }
